[Windows Host] Prevent crash on Windows when sending an empty resolution

This CL fixes an issue introduced by a previous change which allowed clients
to pass an empty resolution to indicate that the host should restore the
original desktop size.

This change worked for Linux and MacOS as they only have a single process which
contains the HostResizeObserver that handles this condition.

On Windows, we have a multi-process architecture where the empty resolution
was forwarded to both the desktop process (which has the HostResize Logic)
and the Daemon process (which treats an empty resolution as a critical
error).

Enabling the host resize logic for RDP is not very useful so I have just added
a check to make sure we don't forward empty resolution values to the Daemon
process.

BUG=869509

Change-Id: I87be6beb3137641ad728c4725f587a7e7f15a48f
Reviewed-on: https://chromium-review.googlesource.com/1157540
Commit-Queue: Joe Downing <joedow@chromium.org>
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579698}
Former-commit-id: 006765f9f478dce9463e272ca3465ff1f578cc30